--- a/main.html
+++ b/main.html
@@ -13,9 +13,20 @@
 	<button type="button" class="btn btn-primary">Button 1</button>
 <button type="button" class="btn btn-light">Button 2</button>
 <button type="button" class="btn btn-success">Button 3</button>
-<button type="button" class="btn btn-danger">Danger</button>
+<button type="button" class="btn btn-danger">Button 4</button>
 </div>
+	<br>
+<div>
+	<button type="button" class="btn btn-primary btn-lg">Button 5</button>
+</div>
+	<br>
+<div>
+	<button type="button" class="btn btn-info">Info</button>
+<button type="button" class="btn btn-light">Light</button>
+<button type="button" class="btn btn-dark">Dark</button>
 
+<button type="button" class="btn btn-link">Link</button>
+</div>
 	
     <script type="text/javascript" src="./script.js">
 
