--- a/main.html
+++ b/main.html
@@ -21,9 +21,9 @@
 </div>
 	<br>
 <div>
-	<button type="button" class="btn btn-info">Info</button>
-<button type="button" class="btn btn-light">Light</button>
-<button type="button" class="btn btn-dark">Dark</button>
+	<button type="button" class="btn btn-info">Button 6</button>
+<button type="button" class="btn btn-light">Button 7</button>
+<button type="button" class="btn btn-dark">Button 8</button>
 
 <button type="button" class="btn btn-link">Link</button>
 </div>
