--- a/main.html
+++ b/main.html
@@ -10,20 +10,20 @@
 <body>
 	<!-- the entire body must be written by student -->
 <div>
-	<button type="button" class="btn btn-primary">Button 1</button>
-<button type="button" class="btn btn-light">Button 2</button>
-<button type="button" class="btn btn-success">Button 3</button>
-<button type="button" class="btn btn-danger">Button 4</button>
+	<button type="button" class="btn btn-primary" id="button-1">Button 1</button>
+<button type="button" class="btn btn-light" id="button-2">Button 2</button>
+<button type="button" class="btn btn-success" id="button-3">Button 3</button>
+<button type="button" class="btn btn-danger" id="button-4">Button 4</button>
 </div>
 	<br>
 <div>
-	<button type="button" class="btn btn-primary btn-lg">Button 5</button>
+	<button type="button" class="btn btn-primary btn-lg" id="button-5">Button 5</button>
 </div>
 	<br>
 <div>
-	<button type="button" class="btn btn-info">Button 6</button>
-<button type="button" class="btn btn-light">Button 7</button>
-<button type="button" class="btn btn-dark">Button 8</button>
+	<button type="button" class="btn btn-info" id="button-6">Button 6</button>
+<button type="button" class="btn btn-light" id="button-7">Button 7</button>
+<button type="button" class="btn btn-dark" id="button-8">Button 8</button>
 
 <button type="button" class="btn btn-link">Link</button>
 </div>
