--- a/main.html
+++ b/main.html
@@ -17,15 +17,15 @@
 </div>
 	<br>
 <div>
-	<button type="button" class="btn btn-primary btn-lg" id="button-5">Button 5</button>
+	<button type="button" class="btn btn-warning btn-lg" id="button-5">Button 5</button>
 </div>
 	<br>
 <div>
 	<button type="button" class="btn btn-info" id="button-6">Button 6</button>
 <button type="button" class="btn btn-light" id="button-7">Button 7</button>
-<button type="button" class="btn btn-dark" id="button-8">Button 8</button>
 
-<button type="button" class="btn btn-link">Link</button>
+
+<button type="button" class="btn btn-link" id="button-8">Button 8</button>
 </div>
 	
     <script type="text/javascript" src="./script.js">
