--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 <div>
 	<button type="button" class="btn btn-primary" id="button-1">Button 1</button>
 <button type="button" class="btn btn-outline-secondary"  id="button-2">Button 2</button>
-<button type="button" class="btn btn-success" id="button-3">Button 3</button>
+<button type="button" class="btn btn-success btn-lg" id="button-3">Button 3</button>
 <button type="button" class="btn btn-danger btn-sm" id="button-4">Button 4</button>
 </div>
 	<br>
@@ -21,7 +21,7 @@
 </div>
 	<br>
 <div>
-	<button type="button" class="btn btn-info" disabled id="button-6">Button 6</button>
+	<button type="button" class="btn btn-info disabled" id="button-6">Button 6</button>
 <button type="button" class="btn btn-light" id="button-7">Button 7</button>
 
 
